Tentative d'implémentation exo4 TME10 BIMA

--- a/BIMA/TME/TME9-10/TME9-10.ipynb
+++ b/BIMA/TME/TME9-10/TME9-10.ipynb
@@ -454,7 +454,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f839a8703a0>]"
+       "[<matplotlib.lines.Line2D at 0x7fb17a586370>]"
       ]
      },
      "execution_count": 12,
@@ -751,7 +751,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29/29 [00:00<00:00, 78.53it/s]\n"
+      "100%|██████████| 29/29 [00:00<00:00, 54.39it/s]\n"
      ]
     }
    ],
@@ -770,7 +770,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f839a50c9d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fb17a22e940>]"
       ]
      },
      "execution_count": 23,
@@ -946,7 +946,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 90/90 [00:33<00:00,  2.69it/s]\n"
+      "100%|██████████| 90/90 [00:32<00:00,  2.77it/s]\n"
      ]
     }
    ],
@@ -966,7 +966,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f839cc27dc0>]"
+       "[<matplotlib.lines.Line2D at 0x7fb17c970970>]"
       ]
      },
      "execution_count": 29,
@@ -1033,7 +1033,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7f839ccdcbb0>"
+       "<matplotlib.colorbar.Colorbar at 0x7fb17c8d8070>"
       ]
      },
      "execution_count": 31,
@@ -1098,7 +1098,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Voici la distance min et max que l'on peut trouver entre deux face de la même catégorie. Pour choisir un $\\theta$ on peut prendre la moyenne entre les deux**"
+    "**Voici la distance min et max que l'on peut trouver entre deux faces de la même catégorie. Pour choisir un $\\theta$ on peut prendre la moyenne entre les deux**"
    ]
   },
   {
@@ -1106,7 +1106,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Logiquement un visage inconnu aurait une distance supérieur au maximum indiqué ci-dessus**"
+    "**Un visage inconnu aura une distance supérieur au maximum indiqué ci-dessus**\n",
+    "\n",
+    "**Pour catégoriser un visage connus où un visage inconnus on fera simplement un `if err > theta`**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14],\n",
+       "       dtype=uint8),\n",
+       " array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14],\n",
+       "       dtype=uint8))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(id_train), np.unique(id_test)"
    ]
   },
   {
@@ -1114,7 +1139,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Voir la suite pour l'implémentation d'un $\\theta$ dans le cadre de la détection d'un visage ou non**"
+    "Il faut re-mélanger tout pour isoler des visages inconnus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  0  0  0  0  0  1  1  1  1  1  1  2  2  2  2  2  2  3  3  3  3  3  3\n",
+      "  4  4  4  4  4  4  5  5  5  5  5  5  6  6  6  6  6  6  7  7  7  7  7  7\n",
+      "  8  8  8  8  8  8  9  9  9  9  9  9 10 10 10 10 10 10 11 11 11 11 11 11\n",
+      " 12 12 12 12 12 12 13 13 13 13 13 13 14 14 14 14 14 14]\n",
+      "[ 0  0  1  1  2  2  3  3  4  4  5  5  6  6  7  7  8  8  9  9 10 10 11 11\n",
+      " 12 12 13 13 14 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(id_train)\n",
+    "print(id_test)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Par chance c'est dans l'ordre ihihih"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_unknown = X_train[:, :-30]\n",
+    "id_train_unknown = id_train[:-30] # Retire les visages [10:14]\n",
+    "Xc_train_unknown = centeredFaces(X_train_unknown, meanFaces(X_train_unknown))\n",
+    "U_unknown, _ = eigenfaces(Xc_train_unknown)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`U_unknown` a été train uniquement sur les visages numéroté de [0; 9]. Ainsi on vas pouvoir tester sur des visage inconnu en utilisant un $\\theta$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "id_test_unknown = [] \n",
+    "for id in id_test:\n",
+    "    if id in [10,11,12,13,14]: \n",
+    "        id_test_unknown.append(1) # 1 = visage inconnu, 0 = visage connu \n",
+    "    else:\n",
+    "        id_test_unknown.append(0)\n",
+    "print(id_test_unknown)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(271.25696618821564, 6743.3195901192785)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D_unknown = calculMatDist(Xc_train_unknown, Xc_train_unknown, U_unknown, 30)\n",
+    "max_list = []\n",
+    "min_list = []\n",
+    "for person in np.unique(id_train_unknown):\n",
+    "    person_index = np.nonzero(id_train_unknown==person)\n",
+    "    min_list.append(np.min(D_unknown[person_index], where=D_unknown[person_index] != 0, initial=1e10)) # Evite le min avec lui même qui donne zéro\n",
+    "    max_list.append(np.max(D_unknown[person_index]))\n",
+    "theta = max(max_list)\n",
+    "min(min_list), max(max_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2941.437640831948\n"
+     ]
+    }
+   ],
+   "source": [
+    "def eval_set(x, x_moy, W, K):\n",
+    "    \"\"\" Vector[d]*Vector[d]*Array[d,n]*list[int] -> NoneType \"\"\"\n",
+    "    err_list = []\n",
+    "    for i in range(x.shape[1]):\n",
+    "        z = projEigenface(x[:, i], x_moy, W, K)\n",
+    "        x_r = reconstruct(z, x_moy, W, K)\n",
+    "        err = errorReconstruct(x_r, x[:,i])\n",
+    "        err_list.append(err)\n",
+    "    return err_list\n",
+    "\n",
+    "def predict(X, W, K, theta):\n",
+    "    err_list = eval_set(X, meanFaces(X_train_unknown), W, K)\n",
+    "    print(max(err_list))\n",
+    "    y_hat = []\n",
+    "    for err in err_list:\n",
+    "        if err > theta:\n",
+    "            y_hat.append(1)\n",
+    "        else:\n",
+    "            y_hat.append(0)\n",
+    "    return y_hat\n",
+    "y_hat = predict(X_test, U_unknown, 30, theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_hat)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Mieux chosir theta en etudiant les valeur min et max de l4erreur between two faces of different categories**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Voir la fin pour l'implémentation d'un $\\theta$ dans le cadre de la détection d'un visage ou non**"
    ]
   },
   {
@@ -1127,6 +1324,26 @@
     "\n",
     "![figure8](./figs/Figure_8.png)\n",
     "<center>Figure 8: illustration of possible cases for classifying an image: case 1,2) $Z$ close to subspace: it is a face 3,4) $Z$ far from subspace: it is not a face, 1) $Z$ is an identified face, case 2) $z$ is an unknown face, case 3) risk of identifying $Z$ as a face when it is not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The training set (90 faces)\n",
+    "X_train = yaleFaces['X_train']\n",
+    "cat_train = yaleFaces['cat_train'][0]\n",
+    "id_train = yaleFaces['id_train'][0]-1\n",
+    "\n",
+    "# The test set (30 faces)\n",
+    "X_test = yaleFaces['X_test']\n",
+    "cat_test = yaleFaces['cat_test'][0]\n",
+    "id_test = yaleFaces['id_test'][0]-1\n",
+    "\n",
+    "# Additional images that don't contain faces \n",
+    "X_noface = yaleFaces['X_noface']"
    ]
   },
   {
@@ -1310,7 +1527,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification"
+    "# Classification Visage/ Non visage\n",
+    "même si c'est très bateau et absolument pas adapté"
    ]
   },
   {
@@ -1428,9 +1646,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "X = np.hstack((X_train, X_noface)).T\n",
     "y = np.hstack((np.ones(X_train.shape[1]), np.zeros(X_noface.shape[1]))).T\n",
-    "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=1/3, random_state=42)\n",
     "X_train, X_test, y_train, y_test = X_train.T, X_test.T, y_train.T, y_test.T"
    ]
