--- a/LRC/Fiches/Fiche_from_TD.tex
+++ b/LRC/Fiches/Fiche_from_TD.tex
@@ -237,4 +237,16 @@ Liste des axiomes logique épistémique S5 :
     \item Savoir si $ p $ : $ K^{si} p \equiv K p \vee K \neg p $ Bien le traduire lui, il est piège
     \item Savoir lequel parmi $ a,b,c \equiv K a \vee K v \vee K c $ 
 \end{itemize}
+
+\section{Connaissance commune et distribué}
+\begin{defn}[]
+    Connaissance commune : tout le monde sait que tout le monde sait
+\end{defn}
+
+
+\section{Intervale de Allen}
+\section{Réseau de pétri}
+
+
+
 \end{document}
