--- a/MLBDA/TD/TD10/TD10.md
+++ b/MLBDA/TD/TD10/TD10.md
@@ -1,5 +1,5 @@
 # Excercice 1
-| Sujet           | Prédicat/propriété | Objet           |
+| Sujet           | Prédicat/Propriété | Objet           |
 |-----------------|--------------------|-----------------|
 | <#green-goblin> | rel:enemyOf        | <#spiderman>    |
 | <#green-goblin> | a                  | foof:Person     |
